--- a/srcs/requirements/nginx/config/default.conf
+++ b/srcs/requirements/nginx/config/default.conf
@@ -2,7 +2,7 @@ server {
 
 	listen 80;
 	listen [::]:80;
-	server_name scakmak.42.fr;
+	server_name mcakay.42.fr;
 	return 301 https://$host$request_uri;
 
 }
@@ -11,7 +11,7 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
 
-    server_name scakmak.42.fr;
+    server_name mcakay.42.fr;
 
     ssl_certificate /etc/ssl/certs/nginx.crt;
     ssl_certificate_key /etc/ssl/private/nginx.key;
