docker compose finished, makefile added, .env added

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -6,6 +6,6 @@ RUN apt-get install -y mariadb-server
 COPY ./config/config.conf /etc/mysql/mariadb.conf.d/
 COPY ./tools /var/www/
 
-RUN service mysql start && mysql < /var/www/initial_db.sql
+RUN service mysql start && mysql < /var/www/db.sql
 
-CMD ["mysqld"]
+CMD ["mysqld"] 
