--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,22 +13,57 @@ volumes:
       type: none
       o: bind
       device: /home/mcakay/data/wordpress
+  db:
+    driver: local
+    name: db_volume
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/mcakay/data/mariadb
+
 
 services:
+  mariadb:
+    image: mariadb
+    container_name: mariadb
+    build: ./requirements/mariadb
+    ports:
+      - "3306:3306"
+    networks:
+      - nw
+    restart: always
+    volumes:
+      - db:/var/lib/mysql
+
+  wordpress:
+    image: wordpress
+    container_name: wordpress
+    build: ./requirements/wordpress
+    env_file:
+      - ./.env
+    ports:
+      - "9000:9000"
+    networks:
+      - nw
+    depends_on:
+      - mariadb
+    restart: always
+    volumes:
+      - wp:/var/www/html
+
   nginx:
     image: nginx
     container_name: nginx
     build: ./requirements/nginx
     env_file:
-      - ./env
+      - ./.env
     ports:
-      80:80
-      443:443
+      - "80:80"
+      - "443:443"
     depends_on:
       - wordpress
     volumes:
-      -wp:var/www/html
-    network:
-      nw
-    restart:
-      always
+      - wp:/var/www/html
+    networks:
+      - nw
+    restart: always
