--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,9 +1,9 @@
-FROM debian:buster-slim
+FROM debian:buster
 
 RUN apt-get update
 RUN apt-get -y install php7.3 php-mysqli php-fpm wget sendmail
 
-COPY ./config/www.conf /etc/php/7.3/fpm/pool.d
+COPY ./conf/www.conf /etc/php/7.3/fpm/pool.d
 COPY ./tools /var/www/
 
 RUN chmod +x /var/www/wordpress_start.sh
