--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,13 @@
+# Wordpress env variables
 WP_URL=mcakay.42.fr
 WP_TITLE=wordpress
-WP_ADMIN_LOGIN=zyasa
-WP_ADMIN_PASSWORD=asd123asd
-WP_ADMIN_EMAIL=zyasa@wordpress.com
+
+# ADMIN env
+WP_ADMIN_LOGIN=unzem
+WP_ADMIN_PASSWORD=bavenk
+WP_ADMIN_EMAIL=unzem@wordpress.com
+
+# USER env
 WP_USER_LOGIN=mcakay
-WP_USER_PASSWORD=42asd42
+WP_USER_PASSWORD=bekinq
 WP_USER_EMAIL=mcakay@wordpress.com
