--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,11 +1,11 @@
-FROM debian:buster-slim
+FROM debian:buster
 
 RUN apt-get update
 RUN apt-get install -y mariadb-server
 
-COPY ./config/config.conf /etc/mysql/mariadb.conf.d/
+COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
 COPY ./tools /var/www/
 
-RUN service mysql start && mysql < /var/www/db.sql
+RUN service mysql start && mysql < /var/www/initial_db.sql
 
-CMD ["mysqld"] 
+CMD ["mysqld"]
