--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,11 +1,12 @@
-FROM debian:buster-slim
+FROM debian:buster
 
-RUN apt-get update && apt-get install -y nginx openssl
+RUN apt-get update
+RUN apt-get install -y nginx openssl
 
-COPY ./config/default.conf /etc/nginx/conf.d/default.conf
+COPY ./conf/default.conf /etc/nginx/conf.d/default.conf
 COPY ./tools/nginx_start.sh /var/www
 
 RUN chmod +x /var/www/nginx_start.sh
-ENTRYPOINT [ "var/www/nginx_start.sh"]
+ENTRYPOINT [ "var/www/nginx_start.sh" ]
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
